# COM_token_Substrate-chain

./: README.md
substrate-node-template/: Cargo.toml  README.md
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: demo.rs  lib.rs
substrate-node-template/runtime/wasm/: Cargo.toml  build.sh
substrate-node-template/runtime/wasm/src/: lib.rs
substrate-node-template/src/: chain_spec.rs  main.rs  service.rs
substrate-ui/src/: app.jsx
