[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-node-template-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-node-template-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-node-template-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
